# llm-py

./: README.md  llm_jq.py  llm_py.py  pyproject.toml
tests/: test_jq.py
