[project]
name = "llm-jq"
version = "0.1"
description = "Write and execute jq programs with the help of LLM"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.9"
dependencies = [
    "llm"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/llm-jq"
Changelog = "https://github.com/simonw/llm-jq/releases"
Issues = "https://github.com/simonw/llm-jq/issues"
CI = "https://github.com/simonw/llm-jq/actions"

[project.entry-points.llm]
jq = "llm_jq"

[project.optional-dependencies]
test = ["pytest"]
