[project]
name = "llm-py"
version = "0.1.0"
description = "Write and execute code with the help of LLM"
readme = "README.md"
authors = [{name = "Kyle Gray"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.9"
dependencies = [
    "llm",
    "rizaio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/riza-io/llm-py"
Changelog = "https://github.com/riza-io/llm-py/releases"
Issues = "https://github.com/riza-io/llm-py/issues"
CI = "https://github.com/riza-io/llm-py/actions"

[project.entry-points.llm]
py = "llm_py"

[project.optional-dependencies]
test = ["pytest"]
